* adds next/previous actions on articles * limit aggregated feed display to 100 articles

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -14,6 +14,7 @@ add_executable(kfeedreader
     feedarticle.cpp
     feedarticlemedia.cpp
     feedarticleenclosure.cpp
+    feednavigation.cpp
     aggregatedfeed.cpp
     reader-rss.cpp
     reader-atom.cpp
