adds feature to synchronize a folder with a list of YouTube subscription generated by Google Takeout

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,6 +4,7 @@
 add_executable(kfeedreader
     opml/import.cpp
     opml/export.cpp
+    youtube/sync.cpp
     main.cpp
     app.cpp
     menuitemmodel.cpp
