adds global custom refresh settings for folders and feeds

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -23,6 +23,7 @@ add_executable(kfeedreader
     reader-rdf.cpp
     reader-atom.cpp
     reader-json.cpp
+    ttlsettings.cpp
     htmlprobe.cpp
     resources.qrc)
 
