--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,6 +5,7 @@ add_executable(kfeedreader
     opml/import.cpp
     opml/export.cpp
     youtube/sync.cpp
+    youtube/favicon.cpp
     main.cpp
     app.cpp
     menuitemmodel.cpp
