update desktop file

--- a/org.kde.kfeedreader.desktop
+++ b/org.kde.kfeedreader.desktop
@@ -2,10 +2,10 @@
 # SPDX-FileCopyrightText: %{CURRENT_YEAR} %{AUTHOR} <%{EMAIL}>
 [Desktop Entry]
 Name=KFeedReader
-Comment=KFeedReader Kirigami Application
+Comment=Web feed aggregator
 Version=1.0
 Exec=kfeedreader
-Icon=applications-development
+Icon=akregator
 Type=Application
 Terminal=false
 # Add an actual main category here (and possibly applicable additional ones)
