--- a/org.kde.fluxkap.desktop
+++ b/org.kde.fluxkap.desktop
@@ -5,8 +5,8 @@ Name=FluxKap
 Comment=Web feed aggregator
 Comment[fr]=Aggregateur de flux issus du web
 Version=1.0
-Exec=kfeedreader
-Icon=/usr/share/icons/hicolor/512x512/apps/fluxkap/app.png
+Exec=fluxkap
+Icon=org.kde.fluxkap
 Type=Application
 Terminal=false
 Categories=Qt;KDE;Network;Feed
