adds support for sharing articles through a 3rd party service

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -22,6 +22,7 @@ set(kfeedreader_src
     reader-json.cpp
     ttlsettings.cpp
     htmlprobe.cpp
+    sharingservice.cpp
     resources.qrc)
 
 if (WIN32)
