adds simple javascript plugin system

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -23,6 +23,7 @@ set(kfeedreader_src
     ttlsettings.cpp
     htmlprobe.cpp
     sharingservice.cpp
+    javascriptplugins.cpp
     resources.qrc)
 
 set(kfeedreader_link_libraries
