adds FeedFetch customRequestCreators to manage custom feed fetching behavior for specific domains
* Take care of WebToons, which no longer advertises their RSS feeds
* Fix YouTube HTML probe not passing YouTube's cookie dialog

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,6 +9,7 @@ set(kfeedreader_src
     feedfolder.cpp
     feed.cpp
     feedfetch.cpp
+    feedfetch_customrequestcreators.cpp
     feedupdate.cpp
     feedfavicon.cpp
     feedarticle.cpp
